<resources>
    <string name="app_name"><b>মেধা</b></string>
    <string name="title_activity_login2">Sign in</string>

    <string name="line1"><b>Tomorrow 1 AM GMT+06:00</b></string>
    <string name="line2"><b>$ 5,000 prize</b></string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_app_id">442342006214223</string>
    <string name="fb_login_protocol_scheme">fb442342006214223</string>


    <string name="title_activity_login3">Sign in</string>
    <string name="title_activity_test_design">TestDesignActivity</string>
    <!--First Activity-->
    <string name="invite">আমন্ত্রণ জানান</string>
    <string name="leaders">মেধাক্রম</string>
    <string name="weekly_rank">সাপ্তাহিক মেধাক্রম</string>
    <string name="next_game"><b>পরবর্তী কুইজ</b></string>
    <string name="balance">মোট আয়</string>
    <string name="extra_life">সুযোগ আছে</string>
    <string name="referral_text">ভুল উত্তর? খেলতে থাকুন আর সাথে রাখুন একটি নতুন সুযোগ।
    </string>
    <string name="referral_code">রেফারেল কোড</string>

    <string name="message3">আপনি আরও দুবার সুযোগ পাচ্ছেন</string>
    <string name="message2">আর মাত্র একবার কিন্তু!</string>
    <string name="message1">আজকের জন্য এখানেই শেষ!</string>
    <string name="time_up">সময় শেষ</string>
    <string name="user_referral_code">
রেফারেল কোড ব্যবহার করুন</string>
    <string name="name"> নাম</string>
    <string name="mobile">  মোবাইল নম্বর</string>
    <string name="continuebtn">কনফার্ম</string>
    <string name="email">
 ই-মেইল</string>
    <string name="get_more">আরও সুযোগ</string>
    <string name="usr_reffaral_code_text">আপনার রেফারেল কোড </string>
    <string name="shareText">শেয়ার</string>
    <string name="share_message1">হ্যালো, আমি মেধা কুইয এ নিয়মিত অংশগ্রহণ করি আপনিও অংসগ্রহণ করতে পারেন। আমার কোড  </string>
    <string name="share_message2"> ব্যবহার করুন। ডাউনলোড করতে এই লিংকটি অনুসরণ করুন।
    </string>


    <string-array name="acc_type">

        <item> CHOOSE ONE </item>
        <item>DBBL</item>
        <item>BKASH</item>
    </string-array>
</resources>
