<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundLayout"
    android:gravity="center"
    android:paddingLeft="10sp"
    android:paddingRight="10sp"
    tools:context="net.smactechnology.medha.ConfirmLoginActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:elevation="4sp"
        app:cardCornerRadius="25sp"


        android:layout_height="wrap_content" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:gravity="center"
            android:padding="15sp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/propic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"

                app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />

            <TextView
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:ems="10"
                android:textAlignment="center"
                android:inputType="textPersonName"
                android:text="@string/name" />
            <TextView
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/email" />

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@android:color/black"
                android:inputType="textPersonName"
                android:hint="@string/mobile" />

            <com.dd.processbutton.FlatButton
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:pb_cornerRadius="25sp"
                android:text= "@string/continuebtn"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>