<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20sp"
    android:background="@color/backgroundLayout"
    tools:context=".FirstActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"


    android:layout_height="50sp">
    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:onClick="goSettings"
        android:background="@color/backgroundLayout"
        app:srcCompat="@mipmap/addfriends" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textAlignment="center"

        android:textSize="25sp"
        android:textColor="@color/holo_orange_light"
        android:gravity="center_vertical"
        android:text="@string/app_name" />
    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"

        android:background="@drawable/roundshape"
        app:srcCompat="@android:drawable/ic_menu_help" />
</LinearLayout>
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:layout_marginBottom="10sp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textAlignment="center"

            android:text="@string/next_game" />
        <TextView
            android:id="@+id/timeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="@string/line1" />

        <TextView
            android:id="@+id/amountText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="@string/line2" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"

        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="25sp"

            android:layout_height="match_parent"
             >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_marginTop="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/bottomborder"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="100sp"
                        android:layout_height="match_parent"


                        android:layout_weight="1"
                        app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_weight="3"
                        android:textColor="@color/backgroundLayout"
                        android:layout_height="match_parent"
                        android:text="TextView" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/rightborder"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/balance" />

                        <TextView
                            android:id="@+id/balanceText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="30sp"
                            android:clickable="true"
                            android:background= "?android:attr/selectableItemBackgroundBorderless"
                            android:textColor="@color/backgroundLayout"
                            android:text="৳"
                            tools:targetApi="lollipop" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:clickable="true"
                        android:background= "?android:attr/selectableItemBackgroundBorderless"
                        android:orientation="vertical"
                        tools:targetApi="lollipop">

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weekly_rank" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/backgroundLayout"
                            android:textSize="30sp"

                            android:text="--" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                   android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingLeft="10sp"
                    android:gravity="center"
                    android:background="@drawable/aboveborder"
                    android:layout_marginBottom="5sp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:text="@string/extra_life" />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:gravity="center"
    android:layout_height="wrap_content">


    <ImageView

        android:layout_gravity="center"
        android:id="@+id/lifeView"

        android:layout_marginTop="4sp"
        android:layout_width="60sp"
        android:layout_height="40sp"
        app:srcCompat="@drawable/ic_heart" />

    <TextView
        android:id="@+id/lifeText"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lifeView"
        android:layout_alignTop="@+id/lifeView"
        android:layout_alignRight="@+id/lifeView"
        android:layout_alignBottom="@+id/lifeView"
        android:text="0" />
</RelativeLayout>


                   <Button
                       android:layout_width="match_parent"
android:layout_weight="1"
                       android:text="@string/get_more"
android:layout_marginRight="10sp"
android:padding="2sp"
                       android:onClick="nextActivity"
            android:textColor="@color/textcolor"
                       android:background="@drawable/btnshaperect"
                       android:layout_height="30sp" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"
        android:layout_gravity="center"

        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
       android:gravity="bottom"
        android:orientation="horizontal">





        <com.dd.processbutton.FlatButton
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:pb_cornerRadius="25sp"
            app:pb_colorNormal="@color/holo_blue_bright"
            android:text="@string/leaders" />

        <com.dd.processbutton.FlatButton
            app:pb_cornerRadius="25sp"
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:pb_colorNormal="@color/holo_blue_bright"
            android:layout_marginLeft="10sp"
            android:text="@string/invite" />
    </LinearLayout>


</LinearLayout>