<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp"
    tools:context=".ReferralCodeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content">


            <ImageView

                android:layout_gravity="center"
                android:id="@+id/lifeView"
                android:background="@drawable/ic_circle"
                android:layout_marginTop="4sp"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:padding="20sp"
                app:srcCompat="@drawable/ic_heart" />

            <TextView
                android:id="@+id/lifeText"
                android:layout_width="match_parent"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:textSize="40sp"

                android:textStyle="bold"
                android:layout_alignLeft="@+id/lifeView"
                android:layout_alignTop="@+id/lifeView"
                android:layout_alignRight="@+id/lifeView"
                android:layout_alignBottom="@+id/lifeView"
                android:text="0" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:text="@string/referral_text" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80sp"
                android:textColor="@color/backgroundLayout"
                android:text="@string/usr_reffaral_code_text"
                android:textAlignment="center"
                android:layout_alignBottom="@+id/relativeLayout2" />

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:background="@drawable/btnshape"
                android:paddingLeft="20sp"

                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
               >

                <TextView
                    android:id="@+id/codeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="60sp"

                    android:text="@string/referral_code" />

                <Button
                    android:id="@+id/shareButton"
                    android:layout_width="120sp"
                    android:layout_height="0sp"
                    android:onClick="sharecontent"
                    android:layout_alignBottom="@+id/codeText"
                    android:layout_alignRight="@+id/codeText"
                    android:background="@drawable/sharebuttonstyle"
                    android:layout_marginTop="2sp"
                    android:layout_alignTop="@+id/codeText"
                    android:gravity="center"
                    android:text="@string/shareText"
                    android:layout_marginRight="5sp"
                    android:layout_marginBottom="2sp"
                    android:textColor="@android:color/white" />
            </RelativeLayout>
        </RelativeLayout>


    </LinearLayout>
</LinearLayout>