<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:elevation="4sp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
<RelativeLayout
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="SETTINGS ACTIVITY" />

    <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
               android:layout_alignParentRight="true"
                android:text="LOG OUT" />
</RelativeLayout>
        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_below="@+id/appbar"
        android:layout_width="match_parent"
        android:padding="10sp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/userPic"
                android:layout_width="match_parent"
                android:layout_height="200sp"
                app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:text="@string/name" />






        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView

                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:text="@string/email"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/txtEmail"
                android:src="@drawable/editp"
                android:paddingLeft="10dp"
                android:id="@+id/editEImg"/>






        </RelativeLayout>




        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView

                android:id="@+id/txtPhone"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:text="Phone"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
            <ImageView
                android:id="@+id/editPImg"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/txtPhone"
                android:src="@drawable/editp"
                android:paddingLeft="10dp"/>






        </RelativeLayout>









        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20sp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/reftext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:text="@string/user_referral_code" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
          android:layout_marginTop="5sp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/inpref"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:background="@drawable/btnshape"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:text="@string/referral_code" />
        </RelativeLayout>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Account Information"
            android:id="@+id/accountBT"
            />

    </LinearLayout>

</RelativeLayout>